<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/chart"
        android:title="@string/chart"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"

        />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom"

        />
    <item
        android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/add"
        app:showAsAction="ifRoom"

        />
    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/history"
        app:showAsAction="ifRoom"


        />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom"
        android:title="@string/settings"
        />




</menu>